# Wind-KVStore

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs
GUI/: pyproject.toml
GUI/src/wind_kvstore_GUI/: GUI.py
doc/: readme_server.md  readme_server_cn.md  readme_shell.md  readme_shell_cn.md
sdk/python/: MANIFEST.in  pyproject.toml  readme.md  readme_cn.md
sdk/python/src/wind_kvstore/: WindKVCore.py  __init__.py  _base.py  _utils.py  _wind_kvcore.pyd  _wind_kvcore.pyi  auto.py  client.py  pool.py  test.py  web.py  wind_kvcore.pyd  wind_kvcore.pyi
sdk/python/src/wind_kvstore/test_sdk/python/: test.py
sdk/test/python/: test.py  test_for_readme.py  try_core.py
src/: config.rs  kvstore.rs  main.rs  server.rs  server_main.rs  shell.rs  shell_main.rs  utils.rs
