[package]
name = "kvstore"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
linefeed = "0.6.0"
linked-hash-map = "0.5.6"
log = "0.4.27"
memmap2 = "0.9.7"
regex = "1.11.1"
thiserror = "2.0.12"

[build-dependencies]
chrono = "0.4.41"

[build]
build = "build.rs"
