[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"

[project]

name = "wind_kvstore_GUI"

version = "0.0.1"

authors = [
    { name = "星灿长风v(StarWindv)", email = "starwindv.stv@gmail.com"}
]

description = "Wind KVStore GUI"

readme = "README.md"

license = { text = "GPLv3" }

requires-python = ">=3.10"

dependencies = [
    "wind_kvstore",
    "PyQt5",
    "stv_utils"
]
urls = { "Homepage" = "https://github.com/StarWindv/Wind-KVStore/tree/main/GUI" }

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
]

[project.scripts]
wkgui = "wind_kvstore_GUI.GUI:main"