[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"

[project]

name = "wind_kvstore"

version = "0.0.1"

authors = [
    { name = "星灿长风v(StarWindv)", email = "starwindv.stv@gmail.com"}
]

description = "Wind KVStore Server SDK in Python"

readme = "README.md"

license = { text = "MIT" }

requires-python = ">=3.10"

dependencies = [
    "requests"
]
urls = { "Homepage" = "https://github.com/StarWindv/Wind-KVStore/tree/main/web_sdk/python" }

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.package-data]

"wind_kvstore" = ["src/wind_kvstore/wind_kvcore.pyd"]

[tool.maturin]

features = ["pyo3/extension-module"]
